--- a/templates/components/hero.html
+++ b/templates/components/hero.html
@@ -2,7 +2,7 @@
       <div class="container">
         <ul class="breadcrumb">
           <li class="link-01"><a href="/">Home</a></li>
-          {% block page_name %}<li class="link-01">Colleges</li>{% endblock %}
+          {% block page_name %} {% endblock %}
         </ul>
         <h3 class="header-03">Check Out the Top Colleges</h3>
         <div class="search-bar_small">
@@ -14,4 +14,4 @@
           <h6 class="label-02">Search Colleges</h6>
         </div>
       </div>
-    </section>
+</section>
