--- a/templates/layout/public.html
+++ b/templates/layout/public.html
@@ -1,74 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include "components/header.html" %}
+  {% load static %}
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>{% block title %} Home {% endblock %}| Examkhojo</title>
+        <meta name="description" content="Top colleges in India rated by Examkhojo.com">
+        <meta name="keywords" content="Colleges, College List, List of Top Colleges in India, Examkhojo Top College List, Examkhojo List of Top Colleges in India, Search Colleges, Colleges in India, Top Colleges in India">
+        <meta property="og:title" content="Examkhojo, A Search Platform">
+        <meta property="og:description" content="Find the best colleges, exams and courses in India">
+        <meta property="og:image" content="https://raw.githubusercontent.com/GaziTaufiqIslam/examkhojo-ui/master/src/assets/images/og_img.jpg">
+        <meta property="og:url" content="examkhojo.com">
+        <meta property="twitter:card" content="summary_large_image">
+        <meta name="theme-color" content="#1a3348">
+        <link rel="stylesheet" href="{% static "assets/css/app.css" %}">
+        <link rel="stylesheet" href="{% static "assets/css/pages/listpages.css" %}">
+        <link rel="icon" href="{% static "assets/images/favicon.ico" %}" type="image/x-icon">
+      </head>
 </html>
 <body>
   {% include "components/register.html" %}
   {% include "components/search.html" %}
   <div class="wrapper">
     {% include "components/nav.html" %}
-    {% include "components/hero.html" %}
-    <section id="cards-section">
+     <section id="hero">
       <div class="container">
-        <div class="cards-group">
-          <div class="card_college">
-            <div class="card_college-img"><img src="assets/images/sample.jpg" alt="College Logo"/></div>
-            <div class="card_college-details"><a class="sub-header-02" href="individual-college.html">IIT Bomabay</a>
-              <div class="card_college-details_secondary"><span class="label-01">Bombay</span><span class="label-01">AICTE</span><span class="label-01">University</span></div><a class="link-primary_lined" href="#downloadIITBombay" download="download">Brochure</a>
-            </div>
-          </div>
-          <div class="card_college">
-            <div class="card_college-img"><img src="assets/images/sample.jpg" alt="College Logo"/></div>
-            <div class="card_college-details"><a class="sub-header-02" href="individual-college.html">IIT Bomabay</a>
-              <div class="card_college-details_secondary"><span class="label-01">Bombay</span><span class="label-01">AICTE</span><span class="label-01">University</span></div><a class="link-primary_lined" href="#downloadIITBombay" download="download">Brochure</a>
-            </div>
-          </div>
-          <div class="card_college">
-            <div class="card_college-img"><img src="assets/images/sample.jpg" alt="College Logo"/></div>
-            <div class="card_college-details"><a class="sub-header-02" href="individual-college.html">IIT Bomabay</a>
-              <div class="card_college-details_secondary"><span class="label-01">Bombay</span><span class="label-01">AICTE</span><span class="label-01">University</span></div><a class="link-primary_lined" href="#downloadIITBombay" download="download">Brochure</a>
-            </div>
-          </div>
-          <div class="card_college">
-            <div class="card_college-img"><img src="assets/images/sample.jpg" alt="College Logo"/></div>
-            <div class="card_college-details"><a class="sub-header-02" href="individual-college.html">IIT Bomabay</a>
-              <div class="card_college-details_secondary"><span class="label-01">Bombay</span><span class="label-01">AICTE</span><span class="label-01">University</span></div><a class="link-primary_lined" href="#downloadIITBombay" download="download">Brochure</a>
-            </div>
-          </div>
-          <div class="card_college">
-            <div class="card_college-img"><img src="assets/images/sample.jpg" alt="College Logo"/></div>
-            <div class="card_college-details"><a class="sub-header-02" href="individual-college.html">IIT Bomabay</a>
-              <div class="card_college-details_secondary"><span class="label-01">Bombay</span><span class="label-01">AICTE</span><span class="label-01">University</span></div><a class="link-primary_lined" href="#downloadIITBombay" download="download">Brochure</a>
-            </div>
-          </div>
-          <div class="card_college">
-            <div class="card_college-img"><img src="assets/images/sample.jpg" alt="College Logo"/></div>
-            <div class="card_college-details"><a class="sub-header-02" href="individual-college.html">IIT Bomabay</a>
-              <div class="card_college-details_secondary"><span class="label-01">Bombay</span><span class="label-01">AICTE</span><span class="label-01">University</span></div><a class="link-primary_lined" href="#downloadIITBombay" download="download">Brochure</a>
-            </div>
-          </div>
-          <div class="card_college">
-            <div class="card_college-img"><img src="assets/images/sample.jpg" alt="College Logo"/></div>
-            <div class="card_college-details"><a class="sub-header-02" href="individual-college.html">IIT Bomabay</a>
-              <div class="card_college-details_secondary"><span class="label-01">Bombay</span><span class="label-01">AICTE</span><span class="label-01">University</span></div><a class="link-primary_lined" href="#downloadIITBombay" download="download">Brochure</a>
-            </div>
-          </div>
-          <div class="card_college">
-            <div class="card_college-img"><img src="assets/images/sample.jpg" alt="College Logo"/></div>
-            <div class="card_college-details"><a class="sub-header-02" href="individual-college.html">IIT Bomabay</a>
-              <div class="card_college-details_secondary"><span class="label-01">Bombay</span><span class="label-01">AICTE</span><span class="label-01">University</span></div><a class="link-primary_lined" href="#downloadIITBombay" download="download">Brochure</a>
-            </div>
-          </div>
-          <div class="card_college">
-            <div class="card_college-img"><img src="assets/images/sample.jpg" alt="College Logo"/></div>
-            <div class="card_college-details"><a class="sub-header-02" href="individual-college.html">IIT Bomabay</a>
-              <div class="card_college-details_secondary"><span class="label-01">Bombay</span><span class="label-01">AICTE</span><span class="label-01">University</span></div><a class="link-primary_lined" href="#downloadIITBombay" download="download">Brochure</a>
-            </div>
-          </div>
+        <ul class="breadcrumb">
+          <li class="link-01"><a href="/">Home</a></li>
+          {% block page_name %} {% endblock %}
+        </ul>
+        <h3 class="header-03">Check Out the Top Colleges</h3>
+        <div class="search-bar_small">
+          <svg class="icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0)">
+              <path d="M23.7901 22.3016L17.9577 16.5907C19.5222 14.8295 20.4694 12.5316 20.4694 10.0201C20.4694 4.49157 15.877 0 10.2362 0C4.59007 0 0.00292969 4.49678 0.00292969 10.0201C0.00292969 15.5433 4.59539 20.0401 10.2362 20.0401C12.8012 20.0401 15.1479 19.1126 16.9466 17.5807L22.779 23.2916C22.9173 23.4271 23.1036 23.5 23.2845 23.5C23.4655 23.5 23.6517 23.4323 23.7901 23.2916C24.0668 23.0206 24.0668 22.5725 23.7901 22.3016ZM1.43442 10.0201C1.43442 5.26796 5.38297 1.40687 10.2309 1.40687C15.0841 1.40687 19.0273 5.27317 19.0273 10.0201C19.0273 14.767 15.0841 18.6385 10.2309 18.6385C5.38297 18.6385 1.43442 14.7722 1.43442 10.0201Z"></path>
+            </g>
+          </svg>
+          <h6 class="label-02">Search Colleges</h6>
         </div>
-        <button class="button-outline load-more">Load More</button>
       </div>
     </section>
+    {% block content %} {% endblock %}
   </div>
   {% include "components/subscribe.html" %}
   {% include "components/footer.html" %}
