added slug to all models

--- a/templates/pages/colleges.html
+++ b/templates/pages/colleges.html
@@ -14,7 +14,7 @@
               </div>
                 {% endfor %}
             </div>
-            {% if colleges.count != 0 %}
+            {% if colleges|length != 0 %}
             <button class="button-outline load-more">Load More</button>
             {% endif %}
           </div>
