Added waypoint for infinite scrolling

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -15,4 +15,7 @@
     <link rel="stylesheet" href="{% static "assets/css/app.css" %}">
     <link rel="stylesheet" href="{% static "assets/css/pages/listpages.css" %}">
     <link rel="icon" href="{% static "assets/images/favicon.ico" %}" type="image/x-icon">
-  </head>
+    <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js" integrity="sha256-w49DIDk8itgSjjuoof5lTxYKwcjWJ7Z2sRW3nU1StNA=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/infinite.js" integrity="sha256-xiMaMrqXioFxnswX7XOy6qeZh1WmqihOHAVBnsQyVQY=" crossorigin="anonymous"></script>
+</head>
