--- a/templates/pages/individual-college.html
+++ b/templates/pages/individual-college.html
@@ -4,29 +4,37 @@
     <li class="link-01"> <a href="/college">Colleges</a></li>
     <li class="link-01">{{ college.full_name }}</li>
 {% endblock %}
-<section id="individual-page-content">
+{% block content %}
+    <section id="individual-page-content">
       <div class="container">
         <div class="main-content">
           <div class="main-content-card quick-facts">
             <h4 class="sub-header-01 quick-facts_header">Quick Facts</h4>
             <div class="quick-facts_content">
               <div class="quick-facts_content-item"><span class="label-01">Ownership</span>
-                <p class="paragraph-01">Private </p>
+                <p class="paragraph-01">{{ college.ownership }} </p>
               </div>
               <div class="quick-facts_content-item"><span class="label-01">Approval</span>
-                <p class="paragraph-01">AICTE</p>
+                <p class="paragraph-01">{{ college.approval }}</p>
               </div>
               <div class="quick-facts_content-item"><span class="label-01">Type of Institute</span>
-                <p class="paragraph-01">Graduation College</p>
+                <p class="paragraph-01">{{ college.college_type }}</p>
               </div>
               <div class="quick-facts_content-item"><span class="label-01">Established</span>
-                <p class="paragraph-01">1990</p>
+                <p class="paragraph-01">{{ college.date_of_establishment }}</p>
               </div>
               <div class="quick-facts_content-item"><span class="label-01">Also Known As</span>
-                <p class="paragraph-01">IEM Kolkata</p>
+                <p class="paragraph-01">{{ college.abbreviated_name }}, {{ college.city }}</p>
               </div>
               <div class="quick-facts_content-item"><span class="label-01">Accepted Exams</span>
-                <p class="paragraph-01">WBJEE, JEE(Mains)</p>
+                <p class="paragraph-01">
+                    {% for exam in exams %}
+                        {{ exam.exam.abbreviated_name }}
+                        {% if forloop.counter < exams.count %}
+                            ,
+                        {% endif %}
+                    {% endfor %}
+                </p>
               </div>
             </div>
           </div>
@@ -44,21 +52,11 @@
             <div class="main-content-card-content">
               <table>
                 <tbody>
+                {% for degree in degrees %}
                   <tr>
-                    <td>M.Tech</td>
-                    <td>BCA</td>
-                    <td>B.Tech</td>
+                    <td>{{ degree.stream.degree.abbreviated_name }}</td>
                   </tr>
-                  <tr>
-                    <td>BBA</td>
-                    <td>MBA</td>
-                    <td>MCA</td>
-                  </tr>
-                  <tr>
-                    <td>BBA LLB</td>
-                    <td>BSc LLB</td>
-                    <td>Diploma</td>
-                  </tr>
+                {% endfor %}
                 </tbody>
               </table>
             </div>
@@ -72,79 +70,13 @@
             <h4 class="sub-header-01 main-content-card-header">Streams Offered</h4>
             <div class="main-content-card-content">
               <table>
-                <thead>
-                  <tr>
-                    <th>Engineering - UG - B.Tech</th>
-                    <th>Engineering - PG - M.Tech</th>
-                  </tr>
-                </thead>
                 <tbody>
+                {% for stream in streams %}
                   <tr>
-                    <td>Computer Science and Engineering</td>
-                    <td>Computer Science and Engineering</td>
+                    <td>stream.stream_1</td>
+                    <td>stream.stream_2</td>
                   </tr>
-                  <tr>
-                    <td>Electrical Engineering</td>
-                    <td>Electrical Engineering</td>
-                  </tr>
-                  <tr>
-                    <td>Electronics Engineering</td>
-                    <td>Mechanical Engineering</td>
-                  </tr>
-                  <tr>
-                    <td>Mechanical Engineering</td>
-                    <td>Bio Technology</td>
-                  </tr>
-                  <tr>
-                    <td>Civil Engineering</td>
-                  </tr>
-                  <tr>
-                    <td>Information Technology</td>
-                  </tr>
-                </tbody>
-              </table>
-              <table>
-                <thead>
-                  <tr>
-                    <th>Others - UG</th>
-                    <th>Otehrs - PG</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>BCA</td>
-                    <td>MCA</td>
-                  </tr>
-                  <tr>
-                    <td>BBA LLB</td>
-                    <td>MBA</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <button class="icon-link main-content-card-button">
-              <svg class="icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path d="M17.5651 14.38L12.5651 19.36C12.4051 19.52 12.2051 19.6 12.0051 19.6C11.8051 19.6 11.6051 19.52 11.4451 19.36L6.44507 14.38C6.12507 14.06 6.12507 13.56 6.44507 13.24C6.76507 12.92 7.26508 12.92 7.58508 13.24L11.2251 16.86V5.20002C11.2251 4.76002 11.5851 4.40002 12.0251 4.40002C12.4651 4.40002 12.8251 4.76002 12.8251 5.20002V16.88L16.4651 13.26C16.7851 12.94 17.2851 12.94 17.6051 13.26C17.8851 13.56 17.8851 14.06 17.5651 14.38Z"></path>
-              </svg><span class="link-primary_lined">Read More</span>
-            </button>
-          </div>
-          <div class="main-content-card">
-            <h4 class="sub-header-01 main-content-card-header">Degrees Offered</h4>
-            <div class="main-content-card-content">
-              <table>
-                <tbody>
-                  <tr>
-                    <td>JEE Main</td>
-                    <td>WBJEE</td>
-                  </tr>
-                  <tr>
-                    <td>GATE</td>
-                    <td>CAT</td>
-                  </tr>
-                  <tr>
-                    <td>JEMAT</td>
-                    <td>WBJECA</td>
-                  </tr>
+                {% endfor %}
                 </tbody>
               </table>
             </div>
@@ -370,4 +302,5 @@
           </div>
         </aside>
       </div>
-</section>
+    </section>
+{% endblock %}
