--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -93,4 +93,4 @@
       <div class="footer-copyright"><span>&copy; Copyright 2020 Examkhojo.com. All rights reserved. All trademarks are owned by their respective owners.</span></div>
     </div>
   </footer>
-<script async src="{% static "assets/js/all.js" %}"></script>
+<script src="{% static "assets/js/all.js" %}"></script>
