added front end changes and updated files

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -30,7 +30,7 @@
                   <path d="M0 0H24V24.3429H0V0Z"></path>
                 </clippath>
               </defs>
-            </svg></a><a class="social-icon" href="https://www.facebook.com/examkhojo/" target="_blank">
+            </svg></a><a class="social-icon" href="https://www.instagram.com/exam_khojo/" target="_blank">
             <svg class="icon" id="insta" width="24" height="25" viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0)">
                 <path d="M17.3766 0H6.62295C2.97106 0 0 3.02333 0 6.73929V17.6816C0 21.3977 2.97106 24.4209 6.62295 24.4209H17.3766C21.0288 24.4209 23.9999 21.3976 23.9999 17.6816V6.73929C24 3.02333 21.0288 0 17.3766 0ZM21.8706 17.6816C21.8706 20.203 19.8547 22.2542 17.3768 22.2542H6.62295C4.1452 22.2543 2.12938 20.203 2.12938 17.6816V6.73929C2.12938 4.21807 4.1452 2.16674 6.62295 2.16674H17.3766C19.8545 2.16674 21.8705 4.21807 21.8705 6.73929V17.6816H21.8706Z"></path>
@@ -65,7 +65,7 @@
                   <path d="M0.295898 0H24.2959V24.4706H0.295898V0Z"></path>
                 </clippath>
               </defs>
-            </svg></a><a class="social-icon" href="https://www.facebook.com/examkhojo/" target="_blank">
+            </svg></a><a class="social-icon" href="https://twitter.com/examkhojo" target="_blank">
             <svg class="icon" id="twitter" width="25" height="24" viewBox="0 0 25 24" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0)">
                 <path d="M24.1343 5.12983C23.8493 4.71912 23.2848 4.61695 22.8738 4.90207L20.0614 6.85348C19.806 7.03064 19.6594 7.32638 19.6728 7.63686C19.6809 7.82308 19.6849 7.9977 19.6849 8.17063C19.6849 13.9193 15.3106 19.8653 7.99038 19.8653C6.49811 19.8653 5.03206 19.5813 3.66188 19.0334L8.00197 17.8194C8.48369 17.6847 8.76495 17.185 8.63018 16.7032C8.49541 16.2216 7.99617 15.9403 7.51397 16.075L0.957645 17.9089C0.613955 18.0051 0.358783 18.294 0.305889 18.647C0.253116 18.9999 0.412402 19.3511 0.712859 19.5437C2.88949 20.9391 5.40606 21.6768 7.99038 21.6768C13.0693 21.6768 16.2503 19.2773 18.0247 17.2644C20.231 14.7613 21.4963 11.4468 21.4963 8.17076C21.4963 8.13489 21.4962 8.09902 21.496 8.06304L23.9065 6.39047C24.3174 6.10523 24.4194 5.54091 24.1343 5.12983Z"></path>
