--- a/templates/components/register.html
+++ b/templates/components/register.html
@@ -3,8 +3,8 @@
       <div class="modal-left">
         <div class="container">
           <div class="modal-left-header"><a class="modal-left-header__brand" href="/"><img src="assets/images/logo-main.png" alt="Examkhojo Main Logo"></a>
-            <h3 class="header-03">Welcome Back</h3>
-            <h5 class="sub-header-02">Log In</h5>
+            <h4 class="sub-header-01">Welcome Back</h4>
+            <h6 class="sub-header-03">Log In</h6>
           </div>
           <div class="mobile_modal-switcher">
             <p class="link-01">Don't Have an Account?<a class="link-primary" href="#signup" id="signUpButton">Sign Up</a></p>
@@ -32,7 +32,7 @@
               <input type="password" autocomplete="current-password" name="password" placeholder="Type your Password" required><a class="link-01" href="/auth/forgot-password">Forgot Your Password?</a>
             </div>
             <div class="form-element">
-              <input class="button-outline" type="submit" value="Log In">
+              <button class="button-primary" type="submit">Log In</button>
             </div>
           </form><span class="divider-line"></span>
           <div class="social-logins">
@@ -69,8 +69,8 @@
       <div class="modal-left">
         <div class="container">
           <div class="modal-left-header">
-            <h3 class="header-03">Welcome to Examkhojo</h3>
-            <h5 class="sub-header-02">Sign Up</h5>
+            <h4 class="sub-header-01">Welcome to Examkhojo</h4>
+            <h6 class="sub-header-02">Sign Up</h6>
           </div>
           <div class="mobile_modal-switcher">
             <p class="link-01">Already Have an Account?<a class="link-primary" href="#signup" id="logInButton">Log In</a></p>
@@ -86,7 +86,7 @@
             </div>
             <div class="form-element">
               <label class="set-password" for="new-password">
-                 Set New Password<span class="label-01">Please use atleast 8 characters</span></label>
+                 Set Password<span class="label-01">Please use atleast 8 characters</span></label>
               <div class="eye-icon">
                 <svg class="icon" id="pwd-hide" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19.7908 19.222L3.20923 5.99135L4.14478 4.81885L20.7264 18.0495L19.7908 19.222Z"></path>
@@ -103,8 +103,8 @@
               <input type="password" autocomplete="new-password" name="new-password" minlength="8" placeholder="Type your Password" required>
             </div>
             <div class="form-element">
-              <p class="agree-terms label-01">By signing up you agree to our <a class="label-01" href="/terms">Terms and Conditions</a></p>
-              <input class="button-outline" type="submit" value="Sign Up">
+              <p class="agree-terms label-01">By signing up you agree to our <a class="label-01 link-01" href="/terms">Terms and Conditions</a></p>
+              <button class="button-primary" type="submit">Sign Up</button>
             </div>
           </form><span class="divider-line"></span>
           <div class="social-logins">
