--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -22,7 +22,7 @@
               <li class="link-items"><a class="label-02" href="/exams">Exams</a></li>
               <li class="link-items"><a class="label-02" href="/colleges">Colleges</a></li>
               <li class="link-items"><a class="label-02" href="/courses">Courses</a></li>
-              <li class="link-items"><a class="label-02" href="#GetCounselling">Get Counselling</a></li>
+              <li class="link-items"><a class="label-02" href="index.html#counselling">Get Counselling</a></li>
             </ul>
             <div class="nav-content-links__right-buttons">
               <button class="button-outline" id="logInButton">Log In</button>
