--- a/templates/layout/public.html
+++ b/templates/layout/public.html
@@ -14,8 +14,8 @@
         <meta property="og:url" content="examkhojo.com">
         <meta property="twitter:card" content="summary_large_image">
         <meta name="theme-color" content="#1a3348">
-        <link href="{% static "/assets/css/app.css" %}">
-        <link href="{% static "/assets/css/pages/listpages.css" %}">
+        <link href="{% static "assets/css/app.css" %}">
+        <link href="{% static "assets/css/pages/listpages.css" %}">
         <link rel="icon" href="{% static "assets/images/favicon.ico" %}" type="image/x-icon">
         <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js" integrity="sha256-w49DIDk8itgSjjuoof5lTxYKwcjWJ7Z2sRW3nU1StNA=" crossorigin="anonymous"></script>
